[tool.poetry]
name = "vesninlib"
version = "0.1.0"
description = ""
authors = ["vladnov138, nech14"]
license = "MIT"
readme = "README.md"
packages = [{include = "vesninlib"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
